<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<groupId>it.maxmin</groupId>
	<artifactId>backoffice-prj</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>backoffice-prj</name>

	<modules>
		<module>ui/backoffice-webapp</module>
		<module>config/backoffice-config</module>
		<module>persistence/backoffice-jdbc-dao</module>
		<module>domain/backoffice-jdbc-model</module>
		<module>service/backoffice-service</module>
	</modules>

	<properties>
		<env>dev</env>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<org.springframework.version>6.1.3</org.springframework.version>
		<jakarta.servlet.version>6.0.0</jakarta.servlet.version>
		<mariadb.client.version>3.3.3</mariadb.client.version>
		<hibernate.version>6.4.4.Final</hibernate.version>
		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
		<logback.version>1.4.8</logback.version>
		<slf4j.version>2.0.7</slf4j.version>
		<jakarta.servlet.jsp.jstl.version>3.0.0</jakarta.servlet.jsp.jstl.version>
		<org.junit.version>5.10.3</org.junit.version>
		<org.springframework.test.version>6.1.11</org.springframework.test.version>
		<org.hamcrest.version>1.3</org.hamcrest.version>
		<org.apache.commons.lang.version>3.14.0</org.apache.commons.lang.version>
		<simple.jndi.version>0.11.4.1</simple.jndi.version>
		<org.mockito.version>4.0.0</org.mockito.version>
		<org.craftercms.mariaDB4j.version>2.4.2.3</org.craftercms.mariaDB4j.version>
		<com.h2database.version>2.1.214</com.h2database.version>
		<com.google.code.findbugs.version>3.0.2</com.google.code.findbugs.version>
	</properties>

	<profiles>
		<profile>
			<id>skip-tests</id>
			<properties>
				<skip.integration.tests>true</skip.integration.tests>
				<skip.unit.tests>true</skip.unit.tests>
			</properties>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<!-- module dependencies -->
			<dependency>
				<groupId>it.maxmin.config</groupId>
				<artifactId>backoffice-config</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>it.maxmin.ui</groupId>
				<artifactId>backoffice-webapp</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>it.maxmin.persistence</groupId>
				<artifactId>backoffice-jdbc-dao</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>it.maxmin.domain</groupId>
				<artifactId>backoffice-jdbc-model</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>it.maxmin.service</groupId>
				<artifactId>backoffice-service</artifactId>
				<version>${project.parent.version}</version>
			</dependency>

			<!-- servlet api -->
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>${jakarta.servlet.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>jakarta.servlet.jsp.jstl</groupId>
				<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
				<version>${jakarta.servlet.jsp.jstl.version}</version>
			</dependency>

			<!-- core Spring dependencies -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>

			<!-- mariadb driver lib -->
			<dependency>
				<groupId>org.mariadb.jdbc</groupId>
				<artifactId>mariadb-java-client</artifactId>
				<scope>runtime</scope>
				<version>${mariadb.client.version}</version>
			</dependency>

			<!-- log dependencies -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${org.apache.commons.lang.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>${com.google.code.findbugs.version}</version>
			</dependency>

			<!-- test dependencies -->

			<dependency>
				<groupId>org.craftercms.mariaDB4j</groupId>
				<artifactId>mariaDB4j-springboot</artifactId>
				<version>${org.craftercms.mariaDB4j.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${org.junit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${org.springframework.test.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>${org.hamcrest.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>simple-jndi</groupId>
				<artifactId>simple-jndi</artifactId>
				<version>${simple.jndi.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-inline</artifactId>
				<version>${org.mockito.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${org.mockito.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${com.h2database.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!-- clean lifecycle -->
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>

				<!-- default lifecycle, jar packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

</project>
